commit naasir 330pm

--- a/trial.html
+++ b/trial.html
@@ -9,7 +9,7 @@
   </div>
 
   <div class="title">
-    <h1>Zoroo UK Feedback</h1>
+    <h1>Zoro UK Feedback</h1>
   </div>
 <br>
 <br>
@@ -41,7 +41,7 @@
     <img height="230px" src="PXL_20220726_112345546.PORTRAIT.jpg" alt="IT team having fun" />
     <img height="230px" src="PXL_20220726_183210013.PORTRAIT.jpg" alt="IT team out to eat" />
   </div>
-<br><br><hr>
+<br><br><hr><br>
 
   <div class="feedback-form">
     <h3>Feedback form</h3>
@@ -56,7 +56,7 @@
       <input type="checkbox"> <br><br>
       <label >What is the nature of your feedback: </label>
       <select>
-        
+        <option value="select" disabled selected>Please select...</option>
         <option value="complaint">I want to complain about something...</option>
         <option value="question">I want to ask a question...</option>
         <option value="general">I want to give general feedback</option>
