--- a/trial.html
+++ b/trial.html
@@ -4,80 +4,81 @@
     <title>Zoro - Feedback</title>
   </head>
 <body style="font-family: Verdana ">
-  <div class="backhome"> 
-      <a href="Zoro.co.uk">Back to Home</a>
-  </div>
+    <div class="backhome"> 
+        <a href="Zoro.co.uk">Back to Home</a>
+    </div>
 
-  <div class="title">
-    <h1>Zoro UK Feedback</h1>
-  </div>
-<br>
-<br>
-  <div class="improve">
-    <a href="#feedback-form"><i>Please tell us how we can improve.</i></a>
-  </div>
-<hr>
-<br>
-  <div class="about-us">
-    <h4>Our Mission</h4>
-    <p>Zoro makes it quick and easy for industries, professions and trades to get the tools and equipment they need through an easy and innovative online</p>
-    <p>experience. Our exceptional delivery, and customer service, as well as our wide range of competitively priced products exceed the expectations of</p>
-    <p>modern businesses.</p>
-    <br>
-    <p>Zoro’s extensive range of over 1 million products includes everything from hand tools to abrasives to personal protective equipment, from leading
-    </p>
-    <p>
-      brands, with many available for next day delivery. It has never been easier for industries, trades and professions to reliably get the business-critical
-    </p>
-    <p>supplies they need.
-    </p>
-    <br>
-    <p>Our team works tirelessly to provide everything you need to keep your business running online and constantly available.
-    </p>
-  </div>
-<br>
-  <div class="images">
-    <img height="230px" src="PXL_20220726_112326429.PORTRAIT.jpg" alt="IT Team working" />
-    <img height="230px" src="PXL_20220726_112345546.PORTRAIT.jpg" alt="IT team having fun" />
-    <img height="230px" src="PXL_20220726_183210013.PORTRAIT.jpg" alt="IT team out to eat" />
-  </div>
-<br><br><hr><br>
-
+    <div class="title">
+      <h1>Zoro UK Feedback</h1>
+    </div>
+  <br>
+  <br>
+    <div class="improve">
+      <a href="#feedback-form"><i>Please tell us how we can improve</i></a>
+    </div>
+  <hr>
+  <br>
+    <div class="about-us">
+      <h4>Our Mission</h4>
+      <p>Zoro makes it quick and easy for industries, professions and trades to get the tools and equipment they need through an easy and innovative online</p>
+      <p>experience. Our exceptional delivery, and customer service, as well as our wide range of competitively priced products exceed the expectations of</p>
+      <p>modern businesses.</p>
+      <br>
+      <p>Zoro’s extensive range of over 1 million products includes everything from hand tools to abrasives to personal protective equipment, from leading
+      </p>
+      <p>
+        brands, with many available for next day delivery. It has never been easier for industries, trades and professions to reliably get the business-critical
+      </p>
+      <p>supplies they need.
+      </p>
+      <br>
+      <p>Our team works tirelessly to provide everything you need to keep your business running online and constantly available.
+      </p>
+    </div>
+  <br>
+    <div class="images">
+      <img height="230px" src="PXL_20220726_112326429.PORTRAIT.jpg" alt="IT Team working" />
+      <img height="230px" src="PXL_20220726_112345546.PORTRAIT.jpg" alt="IT team having fun" />
+      <img height="230px" src="PXL_20220726_183210013.PORTRAIT.jpg" alt="IT team out to eat" />
+    </div>
+  <br><br><hr><br>
   <div class="feedback-form">
-    <h3>Feedback form</h3>
-    <form action="naasir.osman@zoro.co.uk">
-      <label >First name:</label>
-      <input type="text" placeholder="First Name"><br><br>
-      <label>Last name:</label>
-      <input type="text" placeholder="Last Name"> <br><br>
-      <Label>E-mail address:</Label>
-      <input type="email" placeholder="Email adress"> <br><br>
-      <label for="ordered">Have you ordered from our site</label>
-      <input type="checkbox"> <br><br>
-      <label >What is the nature of your feedback: </label>
-      <select>
-        <option value="select" disabled selected>Please select...</option>
-        <option value="complaint">I want to complain about something...</option>
-        <option value="question">I want to ask a question...</option>
-        <option value="general">I want to give general feedback</option>
-        <option value="other">Other...</option>
-      </select> <br><br>
-      <label > What can we help you with?</label> <br>
-      <textarea placeholder="Please tell us in detail..."></textarea> <br><br>
+      <h3>Feedback form</h3>
+      <form action="naasir.osman@zoro.co.uk">
+        <label >First name:</label>
+        <input type="text" placeholder="First Name"><br><br>
+        <label>Last name:</label>
+        <input type="text" placeholder="Last Name"> <br><br>
+        <Label>E-mail address:</Label>
+        <input type="email" placeholder="Email adress"> <br><br>
+        <label for="ordered">Have you ordered from our site</label>
+        <input type="checkbox"> <br><br>
+        <label >What is the nature of your feedback: </label>
+        <select>
+          <option value="select" disabled selected>Please select...</option>
+          <option value="complaint">I want to complain about something...</option>
+          <option value="question">I want to ask a question...</option>
+          <option value="general">I want to give general feedback</option>
+          <option value="other">Other...</option>
+        </select> <br><br>
+        <label > What can we help you with?</label> <br>
+        <textarea placeholder="Please tell us in detail..."></textarea> <br><br>
 
-      <label>Rate our services out of 5</label> <br>
-      <input type="radio" id="1" name="rate">
-      <label for="1">1</label>
-      <input type="radio" id="2" name="rate">
-      <label for="2">2</label><input type="radio" id="3" name="rate">
-      <label for="3">3</label><input type="radio" id="4" name="rate">
-      <label for="4">4</label><input type="radio" id="5" name="rate">
-      <label for="5">5</label>
-      <br><br>
-      <input type="submit" value="Submit">
-      <br><br>
-      <hr>
- 
+        <label>Rate our services out of 5</label> <br>
+        <input type="radio" id="1" name="rate">
+        <label for="1">1</label>
+        <input type="radio" id="2" name="rate">
+        <label for="2">2</label><input type="radio" id="3" name="rate">
+        <label for="3">3</label><input type="radio" id="4" name="rate">
+        <label for="4">4</label><input type="radio" id="5" name="rate">
+        <label for="5">5</label>
+        <br><br>
+        <input type="submit" value="Submit">
+        <br><br>
+        <hr>
+  
+        </form>
+    </div>
 </body>
 
 </html>
