--- a/trial.html
+++ b/trial.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Zoro - Feedback</title>
+    <title>Zoroo - Feedback</title>
   </head>
 <body style="font-family: Verdana ">
     <div class="backhome"> 
