--- a/trial.html
+++ b/trial.html
@@ -16,6 +16,8 @@
     body { align-self: center;
           font-family: Arial, Helvetica, sans-serif;
           background-color: #7697a293;
+          padding: 0;
+          margin: 0;
 
     } 
     .feedback-form {background-color: white;
@@ -28,6 +30,7 @@
       padding-top: 10px;
       color: black;
       width: 500px;
+      float: right;
       
       
       }
@@ -60,10 +63,10 @@
      .mainblock {background-color: #0b485b;
               color: white;
               padding-left: 50px;
-               padding-bottom: 10px;
-              border-radius: 10px;
+               padding-bottom: 30px;
+              border-radius: 0;
               padding-top: 10px;
-              justify-content: flex-start;
+              padding-right: 30px;
             } 
       .lorem {padding-left: 50px;
               padding-right: 50px;
@@ -95,7 +98,8 @@
   .rate {text-align: center;}
   .ordered {text-align: center;}
   .disabledselect {color: #d3d3d3;}
-  .text {margin-bottom: 10px;}
+  .text {margin-bottom: 10px;
+          width: 50%;}
 
 
    
@@ -115,24 +119,24 @@
             <h4>Our Mission</h4>
           </div>
           <div class="mission-text"> 
-            Zoro makes it quick and easy for industries, professions and trades to get <br> the tools and equipment they need through an easy and innovative online
-            experience. <br> Our exceptional delivery, and customer service, as well as our wide range of <br> competitively priced products exceed the expectations of
-          modern businesses. <br>
-            Zoro’s extensive range of over 1 million products includes everything from hand tools <br> to abrasives to personal protective equipment, from leading
-              brands, with many available for <br> next day delivery. It has never been easier for industries, trades and professions to reliably <br> get the business-critical
-            supplies they need. Our team works tirelessly to provide <br> everything you need to keep your business running online and constantly available.
+            Zoro makes it quick and easy for industries, professions and trades to get the tools and equipment they need through an easy and innovative online
+            experience. Our exceptional delivery, and customer service, as well as our wide range of  competitively priced products exceed the expectations of
+          modern businesses.
+            Zoro’s extensive range of over 1 million products includes everything from hand tools to abrasives to personal protective equipment, from leading
+              brands, with many available for next day delivery. It has never been easier for industries, trades and professions to reliably get the business-critical
+            supplies they need. Our team works tirelessly to provide everything you need to keep your business running online and constantly available.
           </div>
         </div>
         <div class="confidentiality">
           <div class="confidentiality-title"><h4>Confidentiality</h4></div>
           <div class="confidentiality-text"> 
-            The Seller shall keep in strict confidence all technical or commercial know-how, <br>
-            specifications, inventions, processes or initiatives which are of a confidential <br>
-              nature and have been disclosed to the Seller by Zoro UK Limited or its agents <br>
-              and any other confidential information concerning Zoro UK Limited's business or <br> its products 
-                which the Seller may obtain and the Seller shall restrict disclosure <br> of such confidential material 
-                to such of its employees, agents or subcontractors <br>  as need to know the same for the purpose of discharging the 
-                  Seller's obligations <br> to Zoro UK Limited and shall ensure that such employees, agents or <br> sub-contractors are subject to like obligations of confidentiality as bind the Seller.              
+            The Seller shall keep in strict confidence all technical or commercial know-how,
+            specifications, inventions, processes or initiatives which are of a confidential
+              nature and have been disclosed to the Seller by Zoro UK Limited or its agents
+              and any other confidential information concerning Zoro UK Limited's business or its products 
+                which the Seller may obtain and the Seller shall restrict disclosure of such confidential material 
+                to such of its employees, agents or subcontractors as need to know the same for the purpose of discharging the 
+                  Seller's obligations to Zoro UK Limited and shall ensure that such employees, agents or sub-contractors are subject to like obligations of confidentiality as bind the Seller.              
             </div> 
         </div>
       </div>
