--- a/trial.html
+++ b/trial.html
@@ -4,7 +4,7 @@
     <title>Zoro - Feedback</title>
   </head>
 <body>
-  <style>
+  <!--  <style>
 
    * {box-sizing: border-box;}
     h1 {color:#0b485b;
@@ -105,7 +105,7 @@
    
 
 
-  </style>
+  </style> -->
 
    <!--   <div class="title">
       <h1> <strong>Zoro UK Feedback</strong> </h1>
